SW_package/sw_project/project_sw/.metadata/.plugins/org.eclipse.cdt.ui/sw_design.build.log
11:15:28 **** Incremental Build of configuration Debug for project sw_design ****
make all 
make[1]: Entering directory '/users/students/r0792566/Documents/DDP/SW_package/sw_project/project_sw/sw_design/Debug'
make --no-print-directory pre-build
a9-linaro-pre-build-step
 
make --no-print-directory main-build
Building file: ../src/main.c
Invoking: ARM v7 gcc compiler
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/main.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I/users/students/r0792566/Documents/DDP/SW_package/sw_project/project_sw/rsa_project_wrapper/export/rsa_project_wrapper/sw/rsa_project_wrapper/standalone_domain/bspinclude/include -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.c"
../src/main.c: In function 'main':
../src/main.c:37:28: error: 'a' undeclared (first use in this function)
   37 |                 montMulOpt(a,b,n,n_prime,res,32);
      |                            ^
../src/main.c:37:28: note: each undeclared identifier is reported only once for each function it appears in
../src/main.c:37:30: error: 'b' undeclared (first use in this function)
   37 |                 montMulOpt(a,b,n,n_prime,res,32);
      |                              ^
../src/main.c:37:32: error: 'n' undeclared (first use in this function)
   37 |                 montMulOpt(a,b,n,n_prime,res,32);
      |                                ^
../src/main.c:37:34: error: 'n_prime' undeclared (first use in this function); did you mean 'n_prime9'?
   37 |                 montMulOpt(a,b,n,n_prime,res,32);
      |                                  ^~~~~~~
      |                                  n_prime9
../src/main.c:42:17: warning: implicit declaration of function 'customprint' [-Wimplicit-function-declaration]
   42 |                 customprint(res, length);
      |                 ^~~~~~~~~~~
../src/main.c:46:29: error: 'expected' undeclared (first use in this function); did you mean 'expected9'?
   46 |                         if (expected[i] != res[i]) {
      |                             ^~~~~~~~
      |                             expected9
../src/main.c:56:25: warning: implicit declaration of function 'customp' [-Wimplicit-function-declaration]
   56 |                         customp(expected);
      |                         ^~~~~~~
make[2]: *** [src/subdir.mk:52: src/main.o] Error 1
make[1]: Leaving directory '/users/students/r0792566/Documents/DDP/SW_package/sw_project/project_sw/sw_design/Debug'
make[1]: *** [makefile:35: all] Error 2

11:15:29 Build Finished (took 428ms)

